# andi75-gltron

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  GLtron.vcxproj  build.ps1  clean.ps1  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  print.bash  readme.adoc  remove_build_dirs.bash
.devcontainer/scripts/apt/: cleanup.bash  install_base.bash  install_gnome_deps.bash  install_opengl_deps.bash  install_sdl1.bash  install_sdl2.bash  install_sdl_deps.bash  install_sfml_deps.bash  install_sqlite.bash
.devcontainer/scripts/config/: config_system.bash
.devcontainer/scripts/custom/: install_emsdk.bash
.devcontainer/scripts/gdb/: .gdbinit  readme.adoc
.devcontainer/scripts/vcpkg/: cleanup.bash  install_catch2.bash  install_cereal.bash  install_cr.bash  install_entt.bash  install_fmt.bash  install_glad.bash  install_gsl.bash  install_gtest.bash  install_imgui.bash  install_ncurses.bash  install_opengl.bash  install_packages.bash  install_sdl.bash  install_sfml.bash  install_stb.bash
GLtron/: CMakeLists.txt  gltron.c
GLtron/audio/: CMakeLists.txt  sound_glue.cpp
GLtron/base/: CMakeLists.txt
GLtron/configuration/: CMakeLists.txt  settings.c
GLtron/filesystem/: CMakeLists.txt  path.c
GLtron/game/: CMakeLists.txt  init.c  scripting_interface.c
GLtron/glew/: glew.vcxproj
GLtron/input/: CMakeLists.txt
GLtron/lib3ds/: CMakeLists.txt  lib3ds.vcxproj
GLtron/libpng/: libpng.vcxproj
GLtron/lua5/: CMakeLists.txt  lua5.vcxproj
GLtron/lua5/lib/: CMakeLists.txt
GLtron/nebu/: CMakeLists.txt  nebu.vcxproj
GLtron/nebu/audio/: CMakeLists.txt
GLtron/nebu/base/: CMakeLists.txt  nebu_log.c  system.c
GLtron/nebu/filesystem/: CMakeLists.txt  filesystem.c
GLtron/nebu/include/video/: nebu_geometry.h  nebu_renderer_gl.h
GLtron/nebu/input/: CMakeLists.txt
GLtron/nebu/scripting/: CMakeLists.txt
GLtron/nebu/video/: CMakeLists.txt  mesh.c
GLtron/video/: CMakeLists.txt
GLtron/zlib/: zlib.vcxproj
SDL2/VisualC/SDL/: SDL.vcxproj
SDL2/VisualC/SDLmain/: SDLmain.vcxproj
SDL_sound/VisualC/: sdl_sound_static.vcxproj
docs/: asan.adoc  cmake.adoc  debug.adoc  git.adoc  ps.adoc  readme.adoc  sdl_sound.adoc  vcpkg.adoc  vs-property-pages.adoc
flac/src/libFLAC/: libFLAC_static.vcxproj
libmikmod/win32/VS2005/: libmikmod.vcxproj
libmodplug/: libmodplug.vcxproj
libogg/win32/VS2010/: libogg_static.vcxproj
libvorbis/win32/VS2010/libvorbis/: libvorbis_static.vcxproj
libvorbis/win32/VS2010/libvorbisfile/: libvorbisfile_static.vcxproj
src/: CMakeLists.txt  defines.h.in  main.c
